# git-code-debt

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  azure-pipelines.yml  example_config.yaml  generate_config.yaml  metric_config.yaml  pre-commit.py  pylintrc  requirements-dev.txt  requirements.txt  sample_widget_consumer.htm  setup.cfg  setup.py  start.sh  tox.ini
.github/workflows/: main.yml
git_code_debt/: config.py  create_tables.py  diff_parser_base.py  discovery.py  file_diff_stat.py  generate.py  generate_config.py  git_repo_parser.py  hg_repo_parser.py  list_metrics.py  logic.py  metric.py  options.py  parse_diff_stat.py  populate_metric_ids.py  repo_parser.py  schema.py  write_logic.py
git_code_debt/metrics/: base.py  binary_file_count.py  common.py  curse.py  curse_words.py  imports.py  lines.py  lines_in_init.py  single_curse_words.txt  submodule_count.py  symlink_count.py  todo.py
git_code_debt/schema/: metric_changes.sql  metric_data.sql  metric_names.sql
git_code_debt/server/: app.py  logic.py  metric_config.py  metric_config.sample.yaml  metric_config_watcher.py  render_mako.py
git_code_debt/util/: compat.py  discovery.py  five.py  iter.py  subprocess.py  time.py  yaml.py
git_code_debt_server/: app.py  config.py  metric_config.py  render_mako.py
git_code_debt_server/logic/: metrics.py
git_code_debt_server/servlets/: graph.py  index.py
git_code_debt_server/templates/: base.mako  graph.mako  index.mako
git_code_debt_util/: backport_subprocess.py  config.py  discovery.py  path.py  time.py
schema/: metric_data.sql
scripts/: populate_metric_ids.py
testing/assertions/: response.py
tests/: app_test.py  conftest.py  create_tables_test.py  discovery_test.py  file_diff_stat_test.py  generate_config_test.py  generate_test.py  hg_repo_parser_test.py  list_metrics_test.py  logic_test.py  repo_parser_test.py
util/: iter.py  time.py
(+107 files in other folders)
