[metadata]
name = git_code_debt
version = 1.1.1
description = A dashboard for monitoring code debt in a git repository.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/git-code-debt
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    cfgv
    flask
    identify
    mako
    markdown-code-blocks
    pyyaml
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    git-code-debt-generate = git_code_debt.generate:main
    git-code-debt-list-metrics = git_code_debt.list_metrics:main
    git-code-debt-server = git_code_debt.server.app:main

[options.package_data]
git_code_debt =
    schema/*.sql
git_code_debt.server =
    templates/*.mako
    static/css/*.css
    static/img/*.gif
    static/js/*.js
    metric_config.sample.yaml

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
omit = *_mako

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
